versioned_docs/version-7.0/client-api/operations/maintenance/connection-strings/add-connection-string.mdx
---
title: "Add Connection String Operation"
sidebar_label: Add Connection String
sidebar_position: 0
hide_table_of_contents: true
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp"];


# Add Connection String Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Use the [PutConnectionStringOperation](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#the%c2%a0putconnectionstringoperation%c2%a0method) method to define a connection string in your database.

* In this page:  
    * [Add a RavenDB connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-a-ravendb-connection-string)  
    * [Add an SQL connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-an-sql-connection-string)  
    * [Add a Snowflake connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-a-snowflake-connection-string)  
    * [Add an OLAP connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-an-olap-connection-string)  
    * [Add an Elasticsearch connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-an-elasticsearch-connection-string)  
    * [Add a Kafka connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-a-kafka-connection-string)  
    * [Add a RabbitMQ connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-a-rabbitmq-connection-string)  
    * [Add an Azure Queue Storage connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-an-azure-queue-storage-connection-string)  
    * [Add an Amazon SQS connection string](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#add-an-amazon-sqs-connection-string)  
    * [The PutConnectionStringOperation method](../../../../client-api/operations/maintenance/connection-strings/add-connection-string#the%c2%a0putconnectionstringoperation%c2%a0method)

</Admonition>
## Add a RavenDB connection string

RavenDB connection strings are used by RavenDB [RavenDB ETL Tasks](../../../../server/ongoing-tasks/etl/raven).

#### Example:
<TabItem value="something" label="add_raven_connection_string">
<CodeBlock language="csharp">
{`// Define a connection string to a RavenDB database destination
// ============================================================
var ravenDBConStr = new RavenConnectionString
\{
    Name = "ravendb-connection-string-name",
    Database = "target-database-name",
    TopologyDiscoveryUrls = new[] \{ "https://rvn2:8080" \}
\};

// Deploy (send) the connection string to the server via the PutConnectionStringOperation
// ======================================================================================
var PutConnectionStringOp = new PutConnectionStringOperation<RavenConnectionString>(ravenDBConStr);
PutConnectionStringResult connectionStringResult = store.Maintenance.Send(PutConnectionStringOp);
`}
</CodeBlock>
</TabItem>

#### Syntax:
<TabItem value="something" label="raven_connection_string">
<CodeBlock language="csharp">
{`public class RavenConnectionString : ConnectionString
\{
    public override ConnectionStringType Type => ConnectionStringType.Raven;
    
    public string Database \{ get; set; \}   // Target database name
    public string[] TopologyDiscoveryUrls; // List of server urls in the target RavenDB cluster
\}
`}
</CodeBlock>
</TabItem>

<Admonition type="note" title="Note">

**Secure servers**  

To [connect to secure RavenDB servers](../../../../server/security/authentication/certificate-management#enabling-communication-between-servers:-importing-and-exporting-certificates)
you need to:  
1. Export the server certificate from the source server.  
2. Install it as a client certificate on the destination server.  
  
This can be done from the Studio [Certificates view](../../../../server/security/authentication/certificate-management#studio-certificates-management-view).  

</Admonition>



## Add an SQL connection string

SQL connection strings are used by RavenDB [SQL ETL Tasks](../../../../server/ongoing-tasks/etl/sql).

#### Example:
<TabItem value="something" label="add_sql_connection_string">
<CodeBlock language="csharp">
{`// Define a connection string to a SQL database destination
// ========================================================
var sqlConStr = new SqlConnectionString
\{
    Name = "sql-connection-string-name",

    // Define destination factory name
    FactoryName = "MySql.Data.MySqlClient",

    // Define the destination database
    // May also need to define authentication and encryption parameters
    // By default, encrypted databases are sent over encrypted channels
    ConnectionString = "host=127.0.0.1;user=root;database=Northwind"
\};

// Deploy (send) the connection string to the server via the PutConnectionStringOperation
// ======================================================================================
var PutConnectionStringOp = new PutConnectionStringOperation<SqlConnectionString>(sqlConStr);
PutConnectionStringResult connectionStringResult = store.Maintenance.Send(PutConnectionStringOp);
`}
</CodeBlock>
</TabItem>

#### Syntax:
<TabItem value="something" label="sql_connection_string">
<CodeBlock language="csharp">
{`public class SqlConnectionString : ConnectionString
\{
    public override ConnectionStringType Type => ConnectionStringType.Sql;
    
    public string ConnectionString \{ get; set; \}
    public string FactoryName \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>



## Add a Snowflake connection string

[Snowflake connection strings](https://github.com/snowflakedb/snowflake-connector-net/blob/master/doc/Connecting.md) 
are used by RavenDB [Snowflake ETL Tasks](../../../../server/ongoing-tasks/etl/snowflake).  

#### Example:
<TabItem value="something" label="add_snowflake_connection_string">
<CodeBlock language="csharp">
{`// Define a connection string to a Snowflake warehouse database
// ==========================================================
var SnowflakeConStr = new SnowflakeConnectionString
\{
    Name = "snowflake-connection-string-name",
    ConnectionString = "ACCOUNT = " + SnowflakeAccount + "; USER = " + SnowflakeUser + "; PASSWORD = " + SnowflakePassword
\};

// Deploy (send) the connection string to the server via the PutConnectionStringOperation
// ======================================================================================
var PutConnectionStringOp =
    new PutConnectionStringOperation<SnowflakeConnectionString>(SnowflakeConStr);
PutConnectionStringResult connectionStringResult = store.Maintenance.Send(PutConnectionStringOp);
`}
</CodeBlock>
</TabItem>



## Add an OLAP connection string

OLAP connection strings are used by RavenDB [OLAP ETL Tasks](../../../../server/ongoing-tasks/etl/olap).  

#### Example: To a local machine
<TabItem value="something" label="add_olap_connection_string_1">
<CodeBlock language="csharp">
{`// Define a connection string to a local OLAP destination
// ======================================================
OlapConnectionString olapConStr = new OlapConnectionString
\{
    Name = "olap-connection-string-name",
    LocalSettings = new LocalSettings
    \{
        FolderPath = "path-to-local-folder"
    \}
\};

// Deploy (send) the connection string to the server via the PutConnectionStringOperation
// ======================================================================================
var PutConnectionStringOp = new PutConnectionStringOperation<OlapConnectionString>(olapConStr);
PutConnectionStringResult connectionStringResult = store.Maintenance.Send(PutConnectionStringOp);
`}
</CodeBlock>
</TabItem>

#### Example: To a cloud-based server
  
* The following example shows a connection string to Amazon AWS.  
* Adjust the parameters as needed if you are using other cloud-based servers (e.g. Google, Azure, Glacier, S3, FTP).  
* The available parameters are listed in [ETL destination settings](../../../../server/ongoing-tasks/etl/olap#etl-destination-settings).  

<TabItem value="something" label="add_olap_connection_string_2">
<CodeBlock language="csharp">
{`// Define a connection string to an AWS OLAP destination
// =====================================================
var olapConStr = new OlapConnectionString
\{
    Name = "myOlapConnectionStringName",
    S3Settings = new S3Settings
    \{
        BucketName = "myBucket",
        RemoteFolderName = "my/folder/name",
        AwsAccessKey = "myAccessKey",
        AwsSecretKey = "myPassword",
        AwsRegionName = "us-east-1"
    \}
\};

// Deploy (send) the connection string to the server via the PutConnectionStringOperation
// ======================================================================================
var PutConnectionStringOp = new PutConnectionStringOperation<OlapConnectionString>(olapConStr);
PutConnectionStringResult connectionStringResult = store.Maintenance.Send(PutConnectionStringOp);
`}
</CodeBlock>
</TabItem>

#### Syntax:
<TabItem value="something" label="olap_connection_string">
<CodeBlock language="csharp">
{`public class OlapConnectionString : ConnectionString
\{
    public override ConnectionStringType Type => ConnectionStringType.Olap;
    
    public LocalSettings LocalSettings \{ get; set; \}
    public S3Settings S3Settings \{ get; set; \}
    public AzureSettings AzureSettings \{ get; set; \}
    public GlacierSettings GlacierSettings \{ get; set; \}
    public GoogleCloudSettings GoogleCloudSettings \{ get; set; \}
    public FtpSettings FtpSettings \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>



## Add an Elasticsearch connection string

Elasticsearch connection strings are used by RavenDB [Elasticsearch ETL Tasks](../../../../server/ongoing-tasks/etl/elasticsearch).

#### Example:
<TabItem value="something" label="add_elasticsearch_connection_string">
<CodeBlock language="csharp">
{`// Define a connection string to an Elasticsearch destination
// ==========================================================
var elasticSearchConStr = new ElasticSearchConnectionString
\{
    Name = "elasticsearch-connection-string-name",
    
    // Elasticsearch Nodes URLs
    Nodes = new[] \{ "http://localhost:9200" \},
    
    // Authentication Method
    Authentication = new Raven.Client.Documents.Operations.ETL.ElasticSearch.Authentication
    \{
        Basic = new BasicAuthentication
        \{
            Username = "John",
            Password = "32n4j5kp8"
        \}
    \}
\};

// Deploy (send) the connection string to the server via the PutConnectionStringOperation
// ======================================================================================
var PutConnectionStringOp = 
    new PutConnectionStringOperation<ElasticSearchConnectionString>(elasticSearchConStr);
PutConnectionStringResult connectionStringResult = store.Maintenance.Send(PutConnectionStringOp);
`}
</CodeBlock>
</TabItem>

#### Syntax:
<TabItem value="something" label="elasticsearch_connection_string">
<CodeBlock language="csharp">
{`public class ElasticsearchConnectionString : ConnectionString
\{
    public override ConnectionStringType Type => ConnectionStringType.ElasticSearch;
    
    public string Nodes \{ get; set; \}
    public string Authentication \{ get; set; \}
    public string Basic \{ get; set; \}
    public string Username \{ get; set; \}
    public string Password \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>



## Add a Kafka connection string

Kafkah connection strings are used by RavenDB [Kafka Queue ETL Tasks](../../../../server/ongoing-tasks/etl/queue-etl/kafka).  
Learn how to add a Kafka connection string in the [Add a Kafka connection string]( ../../../../server/ongoing-tasks/etl/queue-etl/kafka#add-a-kafka-connection-string) section.



## Add a RabbitMQ connection string

RabbitMQ connection strings are used by RavenDB [RabbitMQ Queue ETL Tasks](../../../../server/ongoing-tasks/etl/queue-etl/rabbit-mq).  
Learn how to add a RabbitMQ connection string in the [Add a RabbitMQ connection string]( ../../../../server/ongoing-tasks/etl/queue-etl/rabbit-mq#add-a-rabbitmq-connection-string) section.



## Add an Azure Queue Storage connection string

Azure Queue Storage connection strings are used by RavenDB [Azure Queue Storage ETL Tasks](../../../../server/ongoing-tasks/etl/queue-etl/azure-queue).  
Learn to add an Azure Queue Storage connection string in the [Add an Azure Queue Storage connection string]( ../../../../server/ongoing-tasks/etl/queue-etl/azure-queue#add-an-azure-queue-storage-connection-string) section.



## Add an Amazon SQS connection string

Amazon SQS connection strings are used by RavenDB [Amazon SQS ETL Tasks](../../../../server/ongoing-tasks/etl/queue-etl/amazon-sqs).  
Learn to add an SQS connection string in [this section](../../../../server/ongoing-tasks/etl/queue-etl/amazon-sqs#add-an-amazon-sqs-connection-string).  



## The&nbsp;`PutConnectionStringOperation`&nbsp;method

<TabItem value="something" label="put_connection_string">
<CodeBlock language="csharp">
{`public PutConnectionStringOperation(T connectionString)
`}
</CodeBlock>
</TabItem>

| Parameters           | Type                            | Description                                        |
|----------------------|---------------------------------|----------------------------------------------------|
| **connectionString** | `RavenConnectionString`         | Object that defines the RavenDB connection string. |
| **connectionString** | `SqlConnectionString`           | Object that defines the SQL Connection string. |
| **connectionString** | `SnowflakeConnectionString`     | Object that defines the Snowflake connction string. |
| **connectionString** | `OlapConnectionString`          | Object that defines the OLAP connction string. |
| **connectionString** | `ElasticSearchConnectionString` | Object that defines the Elasticsearch connction string. |
| **connectionString** | `QueueConnectionString`         | Object that defines the connection string for the Queue ETLs tasks (Kafka, RabbitMQ, Azure Queue Storage, and Amazon SQS). |

<TabItem value="something" label="connection_string_class">
<CodeBlock language="csharp">
{`// All the connection string class types inherit from this abstract ConnectionString class:
// ========================================================================================

public abstract class ConnectionString
\{
    // A name for the connection string
    public string Name \{ get; set; \}
    
    // The connection string type
    public abstract ConnectionStringType Type \{ get; \} 
\}

public enum ConnectionStringType
\{
    RavenNone,
    Raven,
    Sql,
    Olap,
    ElasticSearch,
    Queue,
    Snowflake
\}
`}
</CodeBlock>
</TabItem>




</LanguageContent>

<!---
### Connection Strings
- [Get](../../../../client-api/operations/maintenance/connection-strings/get-connection-string)
- [Remove](../../../../client-api/operations/maintenance/connection-strings/remove-connection-string)

### ETL (Extract, Transform, Load) Tasks
- [Operations: How to Add ETL](../../../../client-api/operations/maintenance/etl/add-etl)
- [Ongoing Tasks: ETL Basics](../../../../server/ongoing-tasks/etl/basics)

### External Replication
- [External Replication Task](../../../../studio/database/tasks/ongoing-tasks/external-replication-task)
- [How Replication Works](../../../../server/clustering/replication/replication)


-->